--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@ timezone: Asia/Taipei
 
 title: D13's Note # the main title
 
-tagline:  # it will display as the sub-title
+tagline: A text-focused Jekyll theme # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
+  A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -28,7 +29,7 @@ github:
   username: D13Ting # change to your github username
 
 twitter:
-  username: daniel850113# change to your twitter username
+  username: daniel850113 # change to your twitter username
 
 social:
   # Change to your full name.
@@ -37,8 +38,8 @@ social:
   email: daniel850113@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    # https://twitter.com/username # change to your twitter homepage
-    # https://github.com/D13Ting # change to your github homepage
+    - https://twitter.com/username # change to your twitter homepage
+    - https://github.com/username # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
