--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Taipei
 
 title: D13's Note # the main title
 
-tagline: "" # it will display as the sub-title
+tagline: SGVsbG8gV29ybGQ= # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   for note.
@@ -70,10 +70,10 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: "https://chirpy-img.netlify.app"
+img_cdn: ""
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: 'https://tryhackme-images.s3.amazonaws.com/user-avatars/6304e065990f9600421f95cf-1703058575407'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
