--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Taipei
 
 title: D13's Note # the main title
 
-tagline: Life Geek # it will display as the sub-title
+tagline: 資訊安全 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   for note.
